Update docs: Add Server Stack section

--- a/index.html
+++ b/index.html
@@ -274,6 +274,28 @@
             </div>
         </div>
 
+        <h3>6. Le Hardware & OS (Infrastructure Physique)</h3>
+        <div class="stack-grid">
+            <div class="card">
+                <div class="card-icon">🐧</div>
+                <h2>Linux Server</h2>
+                <p>Environnement robuste et sécurisé (Ubuntu/Debian). Gère les processus longs et les tâches planifiées.</p>
+                <span class="tech-pill">OS</span>
+            </div>
+            <div class="card">
+                <div class="card-icon">⚡</div>
+                <h2>Node.js v22</h2>
+                <p>Le moteur d'exécution JavaScript haute performance qui propulse le noyau OpenClaw.</p>
+                <span class="tech-pill">Runtime</span>
+            </div>
+            <div class="card">
+                <div class="card-icon">🐳</div>
+                <h2>Docker</h2>
+                <p>Isolation totale des processus. Chaque agent tourne dans son conteneur pour une sécurité maximale.</p>
+                <span class="tech-pill">Virtualization</span>
+            </div>
+        </div>
+
         <footer>
             Généré par Clémence le 08/02/2026 • OpenClaw v1.0
         </footer>
